# estudo-GHAS

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-tests.yml
src/: app.py  unsafe.py  web_unsafe.py
tests/: test_app.py
