
[tool.poetry]
name = "estudo-GHAS"
version = "0.1.0"
description = "Projeto simples para demonstrar Dependency Graph, Dependabot e Code Scanning."
authors = ["Vitor Guilherme de Sousa Fontenele <eng.vitorfontenele@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

